infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  # one pod in this cluster
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        #one container in this pod
        - name: orders
          image: requiemleaf/orders
---
# cluster IP-service to allow services inside the cluster to access this pod
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    #to find the pods that it is supposed to govern request to
    app: orders
  ports:
    #specify the list of ports that we want to allow access to
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
      #Next.js by default listens on 3000
